--- a/demo01/index.html
+++ b/demo01/index.html
@@ -9,7 +9,7 @@
     <div id="example"></div>
     <script type="text/babel">
       ReactDOM.render(
-        <h1>Hello, world remote!</h1>,
+        <h1>Hello, world remote 王玉龙!</h1>,
         document.getElementById('example')
       );
     </script>
